# my_mecanum_bot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: display.launch.py
meshes/: Tay2_Link.STL  Wheel_DP_Link.STL  Wheel_DT_Link.STL  Wheel_TP_Link.STL  Wheel_TT_Link.STL  camera_Link.STL  lidar_Link.STL
models/Untitled/: model.sdf
models/my_building/: model.sdf
models/turtlebot3_house/: model.config
rviz/: config.rviz
scripts/: auto_trajectory.py  read_encoder.py  teleop_full.py
urdf/: URDF_MECANUM.csv  URDF_MECANUM.urdf
world/: my_map.world
